@@ -1,3 +1,12 @@
+2007-09-02  Mark Rowe  <mrowe@apple.com>
+
+        Reviewed by Antti.
+
+        <rdar://problem/5454704> WebKit seems to get too-narrow widths for "Monotype Corsiva", so lays out incorrectly
+
+        * platform/mac/FontDataMac.mm:
+        (WebCore::FontData::determinePitch): Work around NSFont incorrectly reporting Monotype Corsiva as fixed pitch.
+
 2007-09-01  Darin Adler  <darin@apple.com>
 
         - rolled out fix for bug 12988 because it broke getElementById in a layout test
